# alpha_mipt_rag

./: .gitignore  CLAUDE.md  colab_run.ipynb  colab_run_2.ipynb  config.yaml  main.py  notebook.ipynb  pipeline.ipynb  pyproject.toml
rag/: chunking.py  config.py  data.py  generation.py  grounding.py  length.py  pipeline.py  rerank.py  submission.py  types.py
rag/eval/: __init__.py  clean.py  recall_l.py
rag/retrieval/: bm25.py  dense.py  hybrid.py
scripts/: answer.py  build_index.py  eval_local.py  eval_retrieval.py  inspect_outliers.py  profile_data.py
