[project]
name = "alpha-mipt-rag"
version = "0.1.0"
description = "RAG over alfabank.ru corpus for the Alfa-Bank x MIPT hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "faiss-cpu>=1.14.2",    # use faiss-gpu-cu12 on Colab: pip install faiss-gpu-cu12
    "openai>=1.50.0",        # OpenAI-compatible client (sglang/vllm/oai)
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "pystemmer>=3.1.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
]
# sglang itself is installed in the notebook (heavy CUDA wheel, Colab-only).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[dependency-groups]
dev = [
    "bert-score>=0.3.13",
    "jupyterlab>=4.5.7",
]
